--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
         <groupId>org.xerial</groupId>
         <artifactId>sqlite-jdbc</artifactId>
         <version>3.25.2</version>
-        <scope>compile</scope>
+        <scope>provided</scope>
     </dependency>
 </dependencies>
 
